--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <h1>
         Blog o lexusiorach
     </h1>
-    <footer>
+    <footer style="background-color: blueviolet;">
+       
         projekt wsb 2022
+       
     </footer>
 </body>
 </html>
