dodano opis bloga

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h1>
         Blog o lexusiorach
     </h1>
+    <p>Blog o tym, ze Lexusior lepszy niz bawara</p>
     <footer style="background-color: blueviolet;">
        
         projekt wsb 2022
