--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         Blog o lexusiorach
     </h1>
     <p>Blog o tym, ze Lexusior lepszy niz bawara</p>
+    <section class="lexus1">
+        <img src="lex.png"
+    </section>
     <footer style="background-color: blueviolet;">
        
         projekt wsb 2022
