--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </h1>
     <p>Blog o tym, ze Lexusior lepszy niz bawara</p>
     <section class="lexus1">
-        <img src="lex.png"
+        <img src="lex.png">
+        <p>czerwony lexus</p>
     </section>
     <footer style="background-color: blueviolet;">
        
