--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <img src="lex.png">
         <p>czerwony lexus</p>
     </section>
+    <section class="lexus2">
+        <p>czarny lexus</p>
+
+    </section>
     <footer style="background-color: blueviolet;">
        
         projekt wsb 2022
